--- a/style.css
+++ b/style.css
@@ -8,5 +8,26 @@
     width: 100%;
     height: 100vh;
     background-color: red;
+    position: relative;
 }
 
+.shoes{
+    width: 500px;
+    height: 100%;
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.model{
+    width: 500px;
+    
+}
+
+h3{
+    text-align: center;
+    color: yellow;
+    font-size: 50px;
+}
