--- a/style.css
+++ b/style.css
@@ -3,6 +3,36 @@
     padding: 0;
     margin: 0;
 }
+nav{
+    line-height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+li{
+    display: inline-block;
+    vertical-align: middle;
+   
+    
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    display: inline-block;
+    border-radius: 50%;
+    line-height: 15px;
+    height: 15px;
+    width: 15px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 13px;
+    font-weight: 900;
+
+}
 
 .item{
     width: 100%;
