--- a/style.css
+++ b/style.css
@@ -3,19 +3,21 @@
     padding: 0;
     margin: 0;
 }
+
+/* Header and Nav */
 nav{
     line-height: 50px;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 90%;
     z-index: 1;
+
 }
 
 li{
     display: inline-block;
-    vertical-align: middle;
-   
-    
+    vertical-align: middle;  
+    margin:5px auto; 
 }
 
 a{
@@ -31,22 +33,23 @@ a{
     vertical-align: middle;
     font-size: 13px;
     font-weight: 900;
-
 }
+/* /Header and Nav */
 
+/* Pannels and shoes */
 .item{
     width: 100%;
     height: 100vh;
     position: relative;
 }
 
-.superga{
+#superga{
     background-color: red;
 }
-.stan-smith{
+#stan-smith{
     background-color: green;
 }
-.converse{
+#converse{
     background-color: yellow;
 }
 
@@ -69,6 +72,7 @@ h3{
     color: yellow;
     font-size: 50px;
 }
- .converse h3{
+ #converse h3{
      color: green;
  }
+/* /Pannels and shoes */
